<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/settingText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/paiementChoice"
            android:gravity="center"
            android:layout_weight="0"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:gravity="center"
            >

            <Button
                android:id="@+id/btnCard"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                style="@style/Widget.AppCompat.Button.Small"
                android:text="@string/paiementCarte"/>

            <Button
                android:id="@+id/btnPaypal"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                style="@style/Widget.AppCompat.Button.Small"
                android:text="@string/paiementPaypal"/>

        </LinearLayout>

    </LinearLayout>





</androidx.constraintlayout.widget.ConstraintLayout>